--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -162,3 +162,32 @@ img {
     padding-left: 0;
   }
 }
+
+
+.dot-grid {
+  background-image: radial-gradient(#858B96 12%, transparent 12%);
+  background-color: transparent;
+  background-position: 0 0, 50px 50px;
+  background-size: 18px 18px;
+  width: 100%;
+  height: 78px;
+  opacity: 0.56;
+  display: none;
+
+}
+
+@media only screen and (min-width: 767px) {
+  .dot-grid {
+    display: block;
+  }
+}
+
+.content {
+  margin: 2rem 2.5rem 5rem;
+}
+
+@media only screen and (min-width: 767px) {
+  .content-wrapper {
+    margin-left: 344px;
+  }
+}
